--- a/templates/grafana/grafana-configmap-dashboard-provider.yml
+++ b/templates/grafana/grafana-configmap-dashboard-provider.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: grafana-dashboard-config
+  name: {{ include "grafana.fullname" . }}-dashboard-config
   labels:
     {{- include "grafana.labels" . | nindent 4 }}
   namespace: {{ .Release.Namespace }}
