--- a/templates/prometheus/prometheus-deployment.yml
+++ b/templates/prometheus/prometheus-deployment.yml
@@ -57,8 +57,20 @@ spec:
           {{- with $.Values.prometheus.volumeMounts }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
+            - name: {{ include "prometheus.fullname" . }}-rules-files
+              mountPath: /etc/prometheus/rules/{{ include "prometheus.fullname" . }}-rules-files
+            - name: {{ include "prometheus.fullname" . }}-server-config
+              mountPath: /etc/prometheus/
           {{- end }}
       {{- with $.Values.prometheus.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
+        - name: {{ include "prometheus.fullname" . }}-rules-files
+          configMap:
+            name: {{ include "prometheus.fullname" . }}-rules-files
+            defaultMode: 420
+        - name: {{ include "prometheus.fullname" . }}-server-config
+          configMap:
+            defaultMode: 420
+            name: {{ include "prometheus.fullname" . }}-server-config
       {{- end }}
